<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choixactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oip"
    tools:context=".ChoixActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telecharger"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/filmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/input_bg"
        android:text="@string/photo"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/Importergallerie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:text="@string/importer"
        app:layout_constraintEnd_toEndOf="@+id/filmer"
        app:layout_constraintStart_toStartOf="@+id/filmer"
        app:layout_constraintTop_toBottomOf="@+id/filmer" />

    <Button
        android:id="@+id/rechercher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:text="@string/recherche"
        app:layout_constraintEnd_toEndOf="@+id/Importergallerie"
        app:layout_constraintStart_toStartOf="@+id/Importergallerie"
        app:layout_constraintTop_toBottomOf="@+id/Importergallerie" />

    <TextView
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:text="@string/retour"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>